Update all extension files: security, detection, and UI improvements

--- a/popup.html
+++ b/popup.html
@@ -12,16 +12,16 @@
   </div>
   <div id="results">
     <div>
-      <p><strong>Links:</strong></p>
+      <p><strong>Link:</strong></p>
       <ul id="botLinks"></ul>
     </div>
     <div>
-      <p><strong>Tokens:</strong></p>
-      <ul id="botTokens"></ul>
+      <p><strong>ChatID:</strong></p>
+      <ul id="chatIds"></ul>
     </div>
     <div>
-      <p><strong>Chat IDs:</strong></p>
-      <ul id="chatIds"></ul>
+      <p><strong>Token:</strong></p>
+      <ul id="botTokens"></ul>
     </div>
   </div>
   <div id="actionButtons" style="margin-top: 15px; text-align: center;">
